--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img src="image/BMICLogo.png">
     <div class="nav-from">
       <label for="">身高 cm</label>
-      <input class="height" value="0" type="number"  placeholder="身高">
+      <input class="height" value="0" type="number" placeholder="身高">
       <label for="">體重 kg</label>
       <input class="weigth" value="0" type="number" placeholder="">
     </div>
@@ -27,13 +27,13 @@
 
     <svg class="progress-ring" height="120" width="120">
       <circle class="circle-ircle" r="55" cx="60" cy="60" />
-      <circle class="progress-ring__circle" r="55" cx="60" cy="60" />      
-      <text class="circle-center-text" x="60" y="60" text-anchor="middle"   alignment-baseline="middle" >看結果</text>
+      <circle class="progress-ring__circle" r="55" cx="60" cy="60" />
+      <text class="circle-center-text" x="60" y="60" text-anchor="middle" alignment-baseline="middle">看結果</text>
       <text class="circle-bmitag" x="46" y="90">BMI</text>
     </svg>
     <span class="bmi-result"></span>
   </div>
-  
+
   <div class="main">
     <!-- <table>
       <tr>
@@ -64,12 +64,25 @@
         <span class="record-content"> <small>height</small> 180cm</span>
         <span class="record-time">09-06-2012 </span>
       </li> -->
-     
+
+    </ul>
+    <div class="pagination">
+    <ul class="pag-wrap">
+      <!-- <li>
+        <a href="" class="pag-click" data-id=${i + 1} >${i + 1}</a>
+      </li> -->
     </ul>
   </div>
-<div class="footer">
-  <img src="image/BMICLogo_footer.png" alt="">
-</div>
+  </div>
+  <!-- <div class="pagination">
+    <ul class="pag-wrap">
+    
+    </ul>
+  </div> -->
+
+  <div class="footer">
+    <img src="image/BMICLogo_footer.png" alt="">
+  </div>
 
 
 
