--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <title></title>
+  <title><%=htmlWebpackPlugin.options.title %></title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/reset.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <!-- <link href="css/reset.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet"> -->
 </head>
 
 <body>
