refactor:pagination use parent EventListener child

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
 
     </ul>
     <div class="pagination">
-    <ul class="pag-wrap">
+    <ul id="pagination" class="pag-wrap">
       <!-- <li>
         <a href="" class="pag-click" data-id=${i + 1} >${i + 1}</a>
       </li> -->
